Proper display of only user code Only compiling the category once now. Monospacing more code windows. Different handling of GroovyShell in code resource class, avoiding possible performance hit related to flushing the groovy stuff.