@@ -25,7 +25,9 @@ import eu.delving.metadata.Path;
 import eu.delving.metadata.RecDef;
 import eu.delving.metadata.RecDefTree;
 import eu.delving.metadata.RecMapping;
-import groovy.lang.*;
+import groovy.lang.Binding;
+import groovy.lang.MissingPropertyException;
+import groovy.lang.Script;
 import groovy.util.Node;
 import groovy.xml.NamespaceBuilder;
 import org.codehaus.groovy.control.MultipleCompilationErrorsException;
@@ -34,7 +36,6 @@ import org.codehaus.groovy.syntax.SyntaxException;
 
 import java.io.PrintWriter;
 import java.io.StringWriter;
-import java.util.Iterator;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -42,10 +43,10 @@ import java.util.regex.Pattern;
  * This core class takes a RecMapping and execute the code that it can generate to
  * transform an input to output in the form of a tree of Groovy Nodes using the
  * normal Groovy NodeBuilder class.
- *
+ * <p/>
  * It wraps the mapping code in the MappingCategory for DSL features, and before
  * executing the mapping it binds the input and output to the script to be run.
- *
+ * <p/>
  * There is a special case in which a specific selected path of the record definition
  * is being compiled, potentially even with edited code.  In this case the whole builder
  * is not created, but only the necessary code to render the given path.  This is for
@@ -57,13 +58,13 @@ import java.util.regex.Pattern;
 
 public class MappingRunner {
     private Script script;
-    private GroovyShell groovyShell;
+    private GroovyCodeResource groovyCodeResource;
     private RecMapping recMapping;
     private String code;
     private int counter = 0;
 
     public MappingRunner(GroovyCodeResource groovyCodeResource, RecMapping recMapping, Path selectedPath, String editedCode) {
-        this.groovyShell = groovyCodeResource.getCategoryShell();
+        this.groovyCodeResource = groovyCodeResource;
         this.recMapping = recMapping;
         this.code = recMapping.getRecDefTree().toCode(recMapping.getFacts(), selectedPath, editedCode);
         script = groovyCodeResource.createMappingScript(code);
@@ -73,33 +74,18 @@ public class MappingRunner {
         this(groovyCodeResource, recMapping, null, null);
     }
 
+    public String getCode() {
+        return code;
+    }
+
     public RecDefTree getRecDefTree() {
         return recMapping.getRecDefTree();
     }
 
     public Node runMapping(MetadataRecord metadataRecord) throws MappingException, DiscardRecordException {
 
-        // Groovy generates classes for each script evaluation
-        // this ends up eating up all permGen space
-        // thus we clear the caches referencing those classes so that GC can remove them
-
-        // additionally Groovy also at each script evaluation generates instances of MetaMethodIndex$Elem
-        // those are SoftReferences so they only disappear when the used memory reaches its max allowed heap
-        // but they also pretty much impact on the execution time, probably because method cache lookup time increases
-        // (maybe because of a poorly implemented equals() & hashcode() implementation)
-        // thus in order to get rid of this performance impact we need a reasonabily low -XX:MaxPermSize
-        // yet it can't be too low because otherwise Groovy won't be able to generate its classes anymore
-        // this is why we now clear those every 50 iterations.
-
-        GroovySystem.setKeepJavaMetaClasses(false);
-        if((counter % 50) == 0) {
-
-            for(Iterator it = GroovySystem.getMetaClassRegistry().iterator(); it.hasNext();) {
-                it.remove();
-            }
-
-            this.groovyShell.resetLoadedClasses();
-            this.groovyShell.getClassLoader().clearCache();
+        if ((counter % 50) == 0) {
+            groovyCodeResource.flush();
         }
         if (metadataRecord == null) {
             throw new RuntimeException("Null input metadata record");
@@ -137,7 +123,7 @@ public class MappingRunner {
         catch (Exception e) {
             String codeLines = fetchCodeLines(e);
             if (codeLines != null) {
-                throw new MappingException(metadataRecord, "Script Exception:\n"+codeLines, e);
+                throw new MappingException(metadataRecord, "Script Exception:\n" + codeLines, e);
             }
             else {
                 throw new MappingException(metadataRecord, "Unexpected: " + e.toString(), e);
